--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.13",
